--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -7,6 +7,13 @@
     --category-buttons-count-per-row: 4;
 }
 
+.create-game-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 50px;
+}
+
 
 /** CHOOSE GAME MODE */
 
@@ -446,8 +453,8 @@
 
 /** CHOOSE OPTIONS */
 
-.gmae-options-container-main-row {
+.game-options-container-main-row {
     border: 3px solid red;
-    flex: 1;
     width: 100%;
+    display: flex;
 }
