--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -346,8 +346,13 @@ label.checkbox > input + span::after {
     transition: opacity 0.1s ease-out;
 }
 
-label.checkbox > input:checked + span::before {
+label.checkbox > input:checked + span::before,
+label.checkbox.checkbox-solid > input + span::before {
     background-color: #fff;
+}
+
+label.checkbox.checkbox-solid {
+    border: 3px solid lightgreen;
 }
 
 label.checkbox > input:checked + span::after {
