--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -487,3 +487,7 @@
     display: flex;
     justify-content: space-evenly;
 }
+
+.question-type-wrapper:not(:last-child) {
+    margin-bottom: 20px;
+}
