--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -529,4 +529,18 @@
         border-radius: 10px;
         padding: 5px;
     }
+
+    .question-type-container {
+        text-align: center;
+
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+
+    .question-type-wrapper {
+        display: inline-block;
+
+        margin-left: 15px;
+        margin-right: 15px;
+    }
 }
