--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -355,6 +355,55 @@ label.checkbox > input:checked + span::after {
     opacity: 1;
 }
 
+label.toggle {
+    position: relative;
+}
+
+label.toggle > input + span {
+    margin-left: 30px;
+    user-select: none;
+}
+
+label.toggle > input + span::before {
+    content: '';
+    width: calc(40px - 2.5px);
+    height: 20px;
+    position: absolute;
+    top: 0;
+    left: 2.5px;
+
+    border: 3px solid #000;
+    background-color: #d63a55;
+    border-radius: 10px;
+
+    cursor: pointer;
+}
+
+label.toggle > input:checked + span::before {
+    background-color: #14B981;
+}
+
+label.toggle > input + span::after {
+    content: '';
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -2.5px;
+    left: 0;
+
+    transition: left 0.1s ease-out;
+
+    border: 3px solid #000;
+    background-color: #fff;
+    border-radius: 12.5px;
+
+    cursor: pointer;
+}
+
+label.toggle > input:checked + span::after {
+    left: 20px;
+}
+
 button {
     font-family: "Cooper Hewitt", sans-serif;
     letter-spacing: 0.5px;
