--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -364,22 +364,27 @@ label.toggle {
     position: relative;
 }
 
+label.toggle > input[type=checkbox] {
+    width: 0;
+    height: 0;
+}
+
 label.toggle > input + span {
-    margin-left: 30px;
+    margin-left: 2.8em;
     user-select: none;
 }
 
 label.toggle > input + span::before {
     content: '';
-    width: calc(40px - 2.5px);
-    height: 20px;
+    width: calc(2.2em - 0.25em);
+    height: 1.2em;
     position: absolute;
     top: 0;
-    left: 2.5px;
+    left: 0.25em;
 
-    border: 3px solid #000;
+    border: 0.2em solid #000;
     background-color: #d63a55;
-    border-radius: 10px;
+    border-radius: 0.6em;
 
     cursor: pointer;
 }
@@ -390,23 +395,23 @@ label.toggle > input:checked + span::before {
 
 label.toggle > input + span::after {
     content: '';
-    width: 25px;
-    height: 25px;
+    width: 1.4em;
+    height: 1.4em;
     position: absolute;
-    top: -2.5px;
+    top: -0.1em;
     left: 0;
 
     transition: left 0.1s ease-out;
 
-    border: 3px solid #000;
+    border: 0.2em solid #000;
     background-color: #fff;
-    border-radius: 12.5px;
+    border-radius: 0.7em;
 
     cursor: pointer;
 }
 
 label.toggle > input:checked + span::after {
-    left: 20px;
+    left: 1em;
 }
 
 button {
