Remove debug border & add margin to hardcore mobile title

--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -552,6 +552,8 @@
 
     .game-options-mobile-title {
         display: block;
+
+        margin-top: 8px;
     }
 
     .question-type-container {
