--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -2,4 +2,22 @@
     border: 3px solid red;
 
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.lobby-title {
+    text-align: center;
+}
+
+.lobby-data-container {
+    flex: 1;
+}
+
+.lobby-footer {
+    border: 3px solid greenyellow;
+
+    display: flex;
+    justify-content: space-between;
 }
