--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -2,6 +2,7 @@
     border: 3px solid red;
 
     height: 100%;
+    overflow: auto;
 
     display: flex;
     flex-direction: column;
@@ -22,6 +23,9 @@
 
 .lobby-main-data {
     flex: 1;
+
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .lobby-secondary-data {
@@ -39,4 +43,30 @@
 
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 1200px) {
+    .lobby-secondary-data {
+        width: 230px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .lobby-data-container {
+        flex-direction: column;
+    }
+
+    .lobby-main-data {
+        margin-left: 0;
+        margin-right: 0;
+
+        order: -1;
+    }
+
+    .lobby-main-data,
+    .lobby-secondary-data {
+        height: auto;
+        width: 100%;
+        flex: 1;
+    }
 }
