--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -67,12 +67,27 @@
     border: 3px solid #fff;
     border-radius: 15px;
 
-    padding: 30px;
+    padding: 30px 15px;
 }
 
 .lobby-box-content.wide-borders {
     border: 6px solid #fff;
     border-radius: 30px;
+}
+
+.lobby-box-scrollable-content {
+    height: 100%;
+    overflow: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.lobby-players-box {
+    height: 100%;
+}
+
+.lobby-players-box .lobby-box-content {
+    height: calc(100% - 40px);
 }
 
 .lobby-player-line-wrapper {
