--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -106,6 +106,36 @@
     margin-bottom: 30px;
 }
 
+.lobby-box-edit-button {
+    border: 2px solid #fff;
+    border-radius: 6px;
+    background-color: var(--button-pink-color);
+    transition: background-color 0.1s ease-out;
+    padding: 0;
+    margin-right: 10px;
+
+    height: 26px;
+    width: 26px;
+
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    position: relative;
+    top: 2px;
+}
+
+.lobby-box-edit-button:hover {
+    cursor: pointer;
+    background-color: var(--button-pink-color-lighter);
+}
+
+.lobby-box-edit-button img {
+    width: 24px;
+    position: relative;
+    top: 1px;
+}
+
 @media screen and (min-width: 993px) {
     .lobby-data-mobile-scrollable-container {
         display: flex;
