--- a/back-office/templates/question/edit.html.twig
+++ b/back-office/templates/question/edit.html.twig
@@ -157,7 +157,7 @@
                 </div>
                 <div id="qcm-answers">
                     {% for answer in question.answer['answers']['qcm'] %}
-                        <div class="col-8 question-answers" id="answer-{{ answersUniqueId.qcm[loop.index0] }}">
+                        <div class="col-8 question-qcm-answers" id="answer-{{ answersUniqueId.qcm[loop.index0] }}">
                             <div class="row mb-3 d-flex">
                                 <div class="col-6">
                                     <textarea name="answers-content-{{ answersUniqueId.qcm[loop.index0] }}"
@@ -280,16 +280,30 @@
                 </div>
                 <div id="input-answers">
                     {% for answer in question.answer['answers']['input'] %}
-                        <div class="col-8 question-answers" id="answer-{{ answersUniqueId.input[loop.index0] }}">
-                            <div class="row mb-3 d-flex">
+                        <div class="col-8 question-input-answers" id="answer-{{ answersUniqueId.input[loop.index0] }}">
+                            <div class="row mb-3 d-flex align-items-center">
                                 <div class="col-6">
-                            <textarea name="answers-content-{{ answersUniqueId.input[loop.index0] }}"
-                                      id="answer-{{ answersUniqueId.input[loop.index0] }}"
-                                      class="form-control"
-                                      {% if context == 'show' %}
-                                          disabled
-                                      {% endif %}
-                            >{{ answer['content'] }}</textarea>
+                                    <textarea name="answers-content-{{ answersUniqueId.input[loop.index0] }}"
+                                              id="answer-{{ answersUniqueId.input[loop.index0] }}"
+                                              class="form-control"
+                                              {% if context == 'show' %}
+                                                  disabled
+                                              {% endif %}
+                                    >{{ answer['content'] }}</textarea>
+                                </div>
+                                <div class="col-4 d-flex flex-column">
+                                    <label class="form-label"
+                                           for="answers-error-allowed-count-{{ answersUniqueId.input[loop.index0] }}"
+                                    >
+                                        Nombre d'erreurs autorisées
+                                    </label>
+                                    <div class="col-6">
+                                        <input type="number"
+                                               id="answers-error-allowed-count-{{ answersUniqueId.input[loop.index0] }}"
+                                               name="answers-error-allowed-count-{{ answersUniqueId.input[loop.index0] }}"
+                                               class="form-control"
+                                               value="{{ answer['errorAllowedCount'] is defined ? answer['errorAllowedCount'] : 1 }}">
+                                    </div>
                                 </div>
                                 {% if context == 'edit' %}
                                     <div class="col-2 d-flex align-items-center">
