--- a/back-office/templates/question/new.html.twig
+++ b/back-office/templates/question/new.html.twig
@@ -94,73 +94,130 @@
         <div class="row mb-3" data-controller="question">
             <div style="display: flex; align-items: baseline">
                 <label for="" class="form-label lead me-1">Réponses</label>
-                <div>
-                    <button type="button"
-                            class="btn btn-sm btn-outline-primary"
-                            style="max-width: 25px; max-height: 25px;
+            </div>
+            <div id="answers">
+                <div style="display: flex; align-items: baseline">
+                    <p class="lead me-2">QCM</p>
+                    <div>
+                        <button type="button"
+                                class="btn btn-sm btn-outline-primary"
+                                style="max-width: 25px; max-height: 25px;
                              display: flex;
                              align-items: center;
                              justify-content: center"
-                            data-action="question#onAddAnswer"
-                    >
-                        <i class="bi bi-plus-lg"></i>
-                    </button>
+                                data-action="question#onAddAnswer"
+                                data-question-format="qcm"
+                        >
+                            <i class="bi bi-plus-lg"></i>
+                        </button>
+                    </div>
                 </div>
-            </div>
-            <div id="answers">
-                {% for i in 0..3 %}
-                <div class="col-8 question-answers" id="answer-{{ answersUniqueId[loop.index0] }}">
-                    <div class="row mb-3 d-flex">
-                        <div class="col-6">
-                        <textarea name="answers-content-{{ answersUniqueId[loop.index0] }}"
-                                  id="answer-{{ answersUniqueId[loop.index0] }}"
-                                  class="form-control"
-                        ></textarea>
-                        </div>
-                        <div class="col-3">
-                                <div class="row mb-2">
-                                    <div class="col-12">
-                                        <input type="radio"
-                                               id="good-answer-radio-{{ answersUniqueId[loop.index0] }}"
-                                               name="answers-is_good_answer-{{ answersUniqueId[loop.index0] }}"
-                                               value="1"
-                                               class="form-check-input"
-                                        />
-                                        <label for="good-answer-radio-{{ answersUniqueId[loop.index0] }}"
-                                               class="form-check-label"
-                                        >
-                                            Bonne réponse
-                                        </label>
+                <div id="qcm-answers">
+                    {% for i in 0..3 %}
+                        <div class="col-8 question-qcm-answers" id="answer-{{ answersUniqueId.qcm[loop.index0] }}">
+                            <div class="row mb-3 d-flex">
+                                <div class="col-6">
+                                    <textarea name="answers-content-{{ answersUniqueId.qcm[loop.index0] }}"
+                                              id="answer-{{ answersUniqueId.qcm[loop.index0] }}"
+                                              class="form-control"
+                                    ></textarea>
+                                </div>
+                                <div class="col-3">
+                                    <div class="row mb-2">
+                                        <div class="col-12">
+                                            <input type="radio"
+                                                   id="good-answer-radio-{{ answersUniqueId.qcm[loop.index0] }}"
+                                                   name="answers-is_good_answer-{{ answersUniqueId.qcm[loop.index0] }}"
+                                                   value="1"
+                                                   class="form-check-input"
+                                            />
+                                            <label for="good-answer-radio-{{ answersUniqueId.qcm[loop.index0] }}"
+                                                   class="form-check-label"
+                                            >
+                                                Bonne réponse
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <input type="radio"
+                                                   id="bad-answer-radio-{{ answersUniqueId.qcm[loop.index0] }}"
+                                                   name="answers-is_good_answer-{{ answersUniqueId.qcm[loop.index0] }}"
+                                                   value="0"
+                                                   class="form-check-input"
+                                            />
+                                            <label for="bad-answer-radio-{{ answersUniqueId.qcm[loop.index0] }}"
+                                                   class="form-check-label"
+                                            >
+                                                Mauvaise réponse
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-12">
-                                        <input type="radio"
-                                               id="bad-answer-radio-{{ answersUniqueId[loop.index0] }}"
-                                               name="answers-is_good_answer-{{ answersUniqueId[loop.index0] }}"
-                                               value="0"
-                                               class="form-check-input"
-                                        />
-                                        <label for="bad-answer-radio-{{ answersUniqueId[loop.index0] }}"
-                                               class="form-check-label"
-                                        >
-                                            Mauvaise réponse
-                                        </label>
-                                    </div>
+                                <div class="col-2 d-flex align-items-center">
+                                    <button type="button"
+                                            class="btn btn-sm btn-outline-danger"
+                                            data-action="question#onDeleteAnswer"
+                                            data-delete-id="{{ answersUniqueId.qcm[loop.index0] }}"
+                                    >
+                                        <i class="bi bi-trash-fill"></i>
+                                    </button>
                                 </div>
+                            </div>
                         </div>
-                        <div class="col-2 d-flex align-items-center">
-                            <button type="button"
-                                    class="btn btn-sm btn-outline-danger"
-                                    data-action="question#onDeleteAnswer"
-                                    data-delete-id="{{ answersUniqueId[loop.index0] }}"
-                            >
-                                <i class="bi bi-trash-fill"></i>
-                            </button>
+                    {% endfor %}
+                </div>
+                <div style="display: flex; align-items: baseline">
+                    <p class="lead me-2">Libre</p>
+                    <div>
+                        <button type="button"
+                                class="btn btn-sm btn-outline-primary"
+                                style="max-width: 25px; max-height: 25px;
+                         display: flex;
+                         align-items: center;
+                         justify-content: center"
+                                data-action="question#onAddAnswer"
+                                data-question-format="input"
+                        >
+                            <i class="bi bi-plus-lg"></i>
+                        </button>
+                    </div>
+                </div>
+                <div id="input-answers">
+                    <div class="col-8 question-input-answers" id="answer-{{ answersUniqueId.input[0] }}">
+                        <div class="row mb-3 d-flex align-items-center">
+                            <div class="col-6">
+                                    <textarea name="answers-content-{{ answersUniqueId.input[0] }}"
+                                              id="answer-{{ answersUniqueId.input[0] }}"
+                                              class="form-control"
+                                    ></textarea>
+                            </div>
+                            <div class="col-4 d-flex flex-column">
+                                <label class="form-label"
+                                       for="answers-error-allowed-count-{{ answersUniqueId.input[0] }}"
+                                >
+                                    Nombre d'erreurs autorisées
+                                </label>
+                                <div class="col-6">
+                                    <input type="number"
+                                           id="answers-error-allowed-count-{{ answersUniqueId.input[0] }}"
+                                           name="answers-error-allowed-count-{{ answersUniqueId.input[0] }}"
+                                           class="form-control"
+                                           value="1">
+                                </div>
+                            </div>
+                            <div class="col-2 d-flex align-items-center">
+                                <button type="button"
+                                        class="btn btn-sm btn-outline-danger"
+                                        data-action="question#onDeleteAnswer"
+                                        data-delete-id="{{ answersUniqueId.input[0] }}"
+                                >
+                                    <i class="bi bi-trash-fill"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                {% endfor %}
             </div>
             <div class="col-6">
                 <label for="additional-response_media-info" class="form-label">Information supplémentaire</label>
