--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -13,7 +13,8 @@
 .lobby-data-mobile-scrollable-container {
     height: 100%;
 
-    overflow: auto;
+    overflow-y: scroll;
+    padding-right: 10px;
 }
 
 .lobby-data-container {
