Hide mobile scrollable container scrollbar on desktop lobby view

--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -211,6 +211,8 @@
     .lobby-data-mobile-scrollable-container {
         display: flex;
         flex-direction: column;
+        
+        overflow-y: auto;
     }
 
     .lobby-main-data,
