Responsive: height auto for lobby category box

--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -252,4 +252,8 @@
     .lobby-box-players .lobby-box-content {
         margin-bottom: 50px;
     }
+
+    .lobby-box-categories .lobby-box-content {
+        height: auto;
+    }
 }
