--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -31,6 +31,10 @@
     width: 1024px;
 }
 
+.question-screen-desktop-clock-container {
+    width: 120px;
+}
+
 .question-screen-desktop-footer {
     border: 3px solid purple;
 }
