--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -8,6 +8,21 @@
 
 .question-screen-desktop-header {
     border: 3px solid chartreuse;
+
+    display: flex;
+    justify-content: center;
+}
+
+.question-screen-desktop-header-item {
+    border: 3px solid #fff;
+    background-color: var(--button-pink-color);
+    border-radius: 10px;
+    text-align: center;
+    font-size: 0.95em;
+    min-width: 225px;
+    padding: 6px 12px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 .question-screen-main-data-container {
