Prepare specific components for QCM and input answer field

--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -73,4 +73,13 @@
     border: 3px solid yellow;
 
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.question-answers {
+    border: 3px solid red;
+
+    max-height: 100%;
 }
