--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -84,6 +84,10 @@
     max-height: 100%;
 }
 
+.question-answers.qcm {
+    height: 100%;
+}
+
 .question-answer-input {
     width: calc(100% - 80px);
     margin-left: 40px;
@@ -119,4 +123,15 @@
 .question-answer-input-display-qcm-button:hover {
     cursor: pointer;
     color: var(--a-hover-color);
+}
+
+.question-answer-qcm-container {
+    display: flex;
+    flex-wrap: wrap;
+
+    height: 100%;
+}
+
+.question-answer-qcm-answer {
+    width: 50%;
 }
