--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -132,6 +132,22 @@
     height: 100%;
 }
 
-.question-answer-qcm-answer {
+.question-answer-qcm-answer-container {
     width: 50%;
+
+    padding: 40px;
+}
+
+.question-answer-qcm-answer {
+    border: 4px solid #fff;
+    border-radius: 15px;
+
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 1.9em;
 }
