Hide desktop quit cross on Question mobile view

--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -205,7 +205,8 @@
 }
 
 @media screen and (max-width: 992px) {
-    .question-screen-desktop-header {
+    .question-screen-desktop-header,
+    .question-screen-desktop-footer{
         display: none;
     }
 
