--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -39,7 +39,7 @@
     flex:999999;
 }
 
-.question-screen-desktop-clock-container {
+.question-screen-clock-container {
     width: 120px;
 }
 
@@ -251,7 +251,7 @@
 
 @media screen and (max-width: 576px) {
     .question-content-container .question-content {
-        max-height: 40vh;
+        max-height: 30vh;
     }
 
     .question-answer-input {
@@ -271,5 +271,24 @@
 
     .question-answer-input-display-qcm-button-container {
         margin-top: 25px;
+    }
+}
+
+@media screen and (max-width: 400px),
+       screen and (max-height: 640px) {
+    .question-screen-clock-container {
+        width: 80px;
+    }
+
+    .question-answer-input {
+        margin-bottom: 15px;
+    }
+
+    .question-answer-input-display-qcm-button-container {
+        margin-top: 15px;
+    }
+
+    .question-answer-input-display-qcm-button {
+        font-size: 1.5rem;
     }
 }
