--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -204,6 +204,25 @@
     background-color: #f19b85;
 }
 
+.question-scores-container {
+    border: 3px solid chartreuse;
+
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.classic-question-good-answer {
+    border: 3px solid blue;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    display: flex;
+    justify-content: center;
+
+    font-size: 2.5em;
+}
+
 @media screen and (max-width: 992px) {
     .question-screen-desktop-header,
     .question-screen-desktop-footer{
