--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -244,8 +244,22 @@
     font-weight: 700;
 }
 
-.question-scores-table-container {
+.question-scores-table-section {
     border: 3px solid chartreuse;
+
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.question-scores-table-section h2 {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.question-scores-table-container {
+    flex: 1;
 }
 
 @media screen and (max-width: 992px) {
