--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -283,6 +283,26 @@
 
     height: 20%;
     width: 50%;
+
+    display: flex;
+}
+
+.question-scores-table-item-rank-container {
+    background-color: #fcfcfc;
+}
+
+.current-player .question-scores-table-item-rank-container {
+    background-color: var(--button-pink-color);
+}
+
+.question-scores-table-item-line {
+    flex: 1;
+
+    display: flex;
+}
+
+.question-scores-table-item-line-player-username {
+    flex: 1;
 }
 
 @media screen and (max-width: 992px) {
