--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -395,6 +395,10 @@
         width: calc(50% - 20px);
         height: calc(20% - 10px);
     }
+
+    .question-scores-table-item-rank-container {
+        margin-right: 10px;
+    }
 }
 
 @media screen and (max-width: 576px) {
