--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -260,6 +260,8 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+
+    align-items: center;
 }
 
 .question-scores-table-item-container {
