--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -569,6 +569,28 @@ button {
     outline: none;
 }
 
+.feedback-modal-app-overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: #00000088;
+    z-index: 1;
+}
+
+.feedback-modal {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+
+    height: 500px;
+    width: 450px;
+
+    background-color: var(--element-primary-background-color);
+    border: 4px solid #fff;
+    border-radius: 10px;
+    padding: 30px;
+}
+
 #lobby-hover-to-show-code {
     position: relative;
 }
