--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -591,6 +591,20 @@ button {
     padding: 30px;
 }
 
+.feedback-modal-close-cross-container {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+
+    transform: scale(0.5);
+    transform-origin: top right;
+}
+
+.feedbacl-modal-title {
+    font-size: 1.4em;
+    margin-bottom: 40px;
+}
+
 #lobby-hover-to-show-code {
     position: relative;
 }
